# subtr-actor

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEMOLITION_FORMAT.md  README.md  RELEASING.md  ballchasing-disagreement-tracker.md  ballchasing-stats.md  flake.nix  justfile  positioning-stat-proposal.md  pyproject.toml  reddit-rocketleague-ballchasing-boost-stats-post.md
bakkesmod/: CMakeLists.txt  README.md  SubtrActorPlugin.cpp  SubtrActorPlugin.h  SubtrActorPluginAbiLayout.cpp  SubtrActorPluginGraphDump.cpp  SubtrActorPluginGraphJson.cpp  SubtrActorPluginGraphJson.h  SubtrActorPluginGraphVerify.cpp  SubtrActorPluginLive.cpp  SubtrActorPlugin_control_windows.cpp  SubtrActorPlugin_event_helpers.cpp  SubtrActorPlugin_event_messages.cpp  SubtrActorPlugin_overlay_layout.cpp  SubtrActorPlugin_review_windows.cpp  SubtrActorPlugin_stats_window_tables.cpp  SubtrActorPlugin_ui_constants.cpp  SubtrActorPlugin_web_config.cpp  SubtrActorPlugin_window_manager.cpp  build-linux-msvc.sh  build-windows.ps1  graph_verify.cpp  stats_windows_core.cpp  verify-graph-dump.py  verify-plugin-artifacts.ps1  verify-plugin-dll-exports.py  verify-plugin-source.py  verify-rust-dll-exports.py  verify-rust-dll-runtime.cpp  verify-rust-dll-runtime.py
bakkesmod-replay-to-training/rust/: Cargo.toml  build.rs
bakkesmod-replay-to-training/rust/include/: replay_to_training.h
bakkesmod-replay-to-training/rust/src/: abi.rs  archetypes.rs  archetypes_tests.rs  ffi.rs  lib.rs  lib_tests.rs  mirror.rs  recorder.rs  recorder_tests.rs  targets_tests.rs
bakkesmod/plugin/: SubtrActorPlugin.cpp  SubtrActorPlugin.h  abi_asserts.cpp  apply_ui_config.cpp  control_windows.cpp  event_helpers.cpp  graph_dump_commands.cpp  graph_stat_helpers.cpp  json_helpers.cpp  launcher_windows.cpp  live_sampling.cpp  live_tick.cpp  overlay_layout.cpp  product_dump_commands.cpp  stats_window_editor.cpp  stats_window_tables.cpp  stats_windows_core.cpp  ui_config_io.cpp  ui_constants.cpp  web_config.cpp  window_manager.cpp
bakkesmod/replay-to-training/: README.md  build-linux-msvc.sh  build-windows.ps1  verify-dll-exports.py
bakkesmod/replay-to-training/plugin/: ReplayToTrainingPlugin.cpp  ReplayToTrainingPlugin.h  rust_bridge.cpp
bakkesmod/replay-to-training/rust/: Cargo.toml
bakkesmod/rust/: Cargo.toml
bakkesmod/rust/include/: subtr_actor_bakkesmod.h
bakkesmod/rust/src/: abi.rs  ffi.rs  ffi_graph_output.rs  graph_output.rs  lib.rs  lib_tests.rs  live_events.rs  live_processor.rs  timeline_drain.rs
bakkesmod/state-export/: .gitignore  CMakeLists.txt  README.md  build-linux-msvc.sh  build-windows.ps1  verify-dll-exports.py
bakkesmod/state-export/plugin/: StateExportPlugin.cpp  StateExportPlugin.h  abi_asserts.cpp  constants.cpp  hooks.cpp  plugin_lifecycle.cpp  rust_bridge.cpp  sampling.cpp  settings_window.cpp  tick.cpp
bakkesmod/state-export/rust/: Cargo.toml  build.rs
bakkesmod/subtr-actor/: README.md  build-linux-msvc.sh  build-windows.ps1  verify-plugin-artifacts.ps1  verify-plugin-dll-exports.py  verify-plugin-source.py  verify-rust-dll-exports.py  verify-rust-dll-runtime.py
bakkesmod/subtr-actor/plugin/: SubtrActorPlugin.h  event_helpers.cpp  graph_dump_commands.cpp  json_inspector_windows.cpp  live_sampling.cpp  review_windows.cpp  stats_window_editor.cpp  ui_config_io.cpp  ui_constants.cpp  web_config.cpp  window_manager.cpp
bakkesmod/subtr-actor/rust/: Cargo.toml
bakkesmod/toolchains/: linux-msvc-clang.cmake
crates/subtr-actor-bakkesmod/: Cargo.toml
crates/subtr-actor-bakkesmod/include/: subtr_actor_bakkesmod.h
crates/subtr-actor-bakkesmod/src/: abi.rs  abi_events.rs  abi_goal_context.rs  abi_live_frame.rs  abi_math.rs  abi_mechanics.rs  engine.rs  engine_constants.rs  ffi.rs  ffi_drain.rs  ffi_graph_json.rs  ffi_graph_json_analysis_node.rs  ffi_graph_json_analysis_node_names.rs  ffi_graph_json_info.rs  ffi_graph_json_output.rs  ffi_graph_output.rs  ffi_lifecycle.rs  ffi_live_json.rs  lib.rs  (+93 more)
crates/subtr-actor-live/: Cargo.toml
crates/subtr-actor-live-consumer/: Cargo.toml
crates/subtr-actor-tools/: Cargo.toml  README.md
crates/subtr-actor-training/: Cargo.toml
js/: .npmignore  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  subtr-actor-js-0.1.6.tgz
js/example/: README.md  index.html  package-lock.json  package.json  vite.config.js
js/mechanic-review-player/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
js/mechanics-evaluation-player/: README.md  index.html  package-lock.json  package.json  vite.config.ts
js/pages/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
js/player/: LICENSE  PLAYER_ENGINE.md  README.md  VIEWER_README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  vite.config.ts
js/scripts/: build-wasm.sh  ensure-wasm-package.mjs  prepare-wasm-package.mjs  with-clean-npm-env.sh
js/src/: lib.rs  progress.rs  replay_collection.rs  stats_timeline_json.rs  training.rs
js/stat-evaluation-player/: README.md  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  vite.config.ts
js/stats-timeline-viewer/: README.md  index.html  package-lock.json  package.json  vite.config.js
js/three-player/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
js/viewer/: README.md  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vite.package.config.ts
ml/flip_reset_transformer/: .gitignore  README.md  pyproject.toml
python/: .gitignore  Cargo.toml  PYTHON-README.md  README.md  build-requirements.txt  publish.sh  pyproject.toml  setup.py
python/src/: lib.rs
python/subtr_actor/: __init__.py
python/tests/: 029103f9-4d58-4964-b47a-539b32f6fb33.replay  __init__.py  test_filepath_functions.py
scripts/threat_model/: README.md  fetch_corpus.py  pyproject.toml  train_threat_model.py
wasm-bindings/: Cargo.toml  package.json
wasm-bindings/example/: .gitignore  README.md  index.html
(+2462 files in other folders)
