[workspace]
members = [".", "crates/subtr-actor-tools", "js", "python"]
resolver = "2"

[workspace.package]
version = "0.8.9"
authors = ["Ivan Malison <ivanmalison@gmail.com>"]
license = "MIT"
repository = "https://github.com/rlrml/subtr-actor"
edition = "2021"

[workspace.dependencies]
boxcars = ">=0.11.1, <1.0.0"

[package]
name = "subtr-actor"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
keywords = ["rocket-league"]
categories = ["parsing"]
description = "Rocket League replay transformer"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/src/**",
]

[features]
default = []

[dependencies]
anyhow = "1.0.98"
boxcars.workspace = true
derive-new = ">=0.7.0, <1.0.0"
erased-serde = ">=0.4.6, <1.0.0"
float-ord = ">=0.3.2, <1.0.0"
glam = ">=0.31.0, <1.0.0"
log = ">=0.4.27, <1.0.0"
ndarray = ">=0.17.2, <1.0.0"
paste = "1.0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
ts-rs = "11.1.0"

[badges.github]
repository = "rlrml/subtr-actor"

[badges.maintenance]
status = "actively-developed"
