[package]
name = "rl-replay-subtr-actor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for subtr-actor - Rocket League replay processing and analysis"
repository = "https://github.com/rlrml/subtr-actor"

[lib]
crate-type = ["cdylib"]

[dependencies]
subtr-actor = { path = ".." }
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
boxcars = "0.10.10"

[dependencies.web-sys]
version = "0.3.85"
features = [
  "console",
]

[package.metadata.wasm-pack.profile.release]
wee-alloc = false

[package.metadata.wasm-pack.profile.dev]
wee-alloc = false
