[package]
name = "subtr-actor-py"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
boxcars = "0.10.4"
subtr-actor = { path = ".." }
numpy = "0.22.0"
serde_json = "1.0.52"

[dependencies.pyo3]
version = "0.22.0"
features = ["extension-module"]

[lib]
name = "subtr_actor"
crate-type = ["cdylib"]
