[package]
name = "subtr-actor-py"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
boxcars = "0.10.10"
numpy = "0.27.1"
serde_json = "1.0"

[dependencies.subtr-actor]
path = ".."
version = "0.1.10"

[dependencies.pyo3]
version = "0.27.2"
features = ["extension-module"]

[lib]
name = "subtr_actor"
crate-type = ["cdylib"]
