[package]
name = "subtr-actor-py"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
boxcars.workspace = true
numpy = "0.27.1"
serde_json = "1.0"

[dependencies.subtr-actor]
path = ".."
version = "0.2.3"

[dependencies.pyo3]
version = "0.27.2"
features = ["extension-module"]

[lib]
name = "subtr_actor"
crate-type = ["cdylib"]
