[project]
name = "subtr-actor-py"
version = "0.1.11"
description = "Python bindings for the Rocket League replay processing library subtr-actor."
authors = [{ name = "Ivan Malison", email = "ivanmalison@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/rlrml/subtr-actor"

[dependency-groups]
dev = ["wheel", "maturin>=1.0", "pytest", "numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
