[project]
name = "subtr-actor-py"
version = "0.4.0"
description = "Python bindings for the Rocket League replay processing library subtr-actor."
authors = [{ name = "Ivan Malison", email = "ivanmalison@gmail.com" }]
license = { text = "MIT" }
readme = "PYTHON-README.md"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/rlrml/subtr-actor"

[dependency-groups]
dev = ["wheel", "pytest", "numpy"]

[tool.maturin]
python-source = "."
module-name = "subtr_actor.subtr_actor"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<1.11"]
build-backend = "maturin"
