[package]
name = "subtr-actor-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Malison <ivanmalison@gmail.com>"]
license = "MIT"
description = "WASM bindings for subtr-actor"
repository = "https://github.com/rlrml/subtr-actor"

[lib]
crate-type = ["cdylib"]

[dependencies]
subtr-actor = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
boxcars = "0.10.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[package.metadata.wasm-pack.profile.release]
wee-alloc = false