[package]
name = "subtr-actor-live-consumer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "WebSocket consumer, state store, and analysis-graph driver for the subtr-actor live export stream"

[dependencies]
subtr-actor = { path = "../.." }
subtr-actor-live = { path = "../subtr-actor-live" }
tungstenite = { version = "0.29.0", default-features = false, features = [
    "handshake",
] }

[dev-dependencies]
boxcars.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.140"
subtr-actor-live = { path = "../subtr-actor-live", features = ["server"] }
