[package]
name = "subtr-actor-live"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Owned live-frame model, event heuristics, and processor view shared by live subtr-actor integrations"

[features]
server = ["dep:tungstenite"]

[dependencies]
boxcars.workspace = true
glam = ">=0.31.0, <1.0.0"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
subtr-actor = { path = "../.." }
tungstenite = { version = "0.29.0", default-features = false, features = [
    "handshake",
], optional = true }
