[package]
name = "subtr-actor-tools"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
description = "Ad-hoc diagnostics and Ballchasing comparison tooling for subtr-actor development"

[dependencies]
anyhow = "1.0.98"
boxcars.workspace = true
float-ord = ">=0.3.2, <1.0.0"
glam = ">=0.31.0, <1.0.0"
ndarray = ">=0.17.2, <1.0.0"
reqwest = { version = ">=0.12.15, <1.0.0", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
subtr-actor = { path = "../.." }
