[package]
name = "subtr-actor-training"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Parse, edit, and serialize Rocket League custom training pack (.tem) save files"

[dependencies]
aes = "0.8"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
ts-rs = "11.1.0"
