[project]
name = "subtr-actor-flip-reset-transformer"
version = "0.1.0"
description = "Baseline transformer experiments for flip reset detection using subtr-actor replay features."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "subtr-actor-py",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.uv.sources]
subtr-actor-py = { path = "../../python" }

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flip_reset_transformer"]
