[project]
name = "subtr-actor-threat-model"
version = "0.1.0"
description = "Reproducible offline environment for training the subtr-actor threat model"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.2,<4",
    "scikit-learn>=1.5,<2",
]

[dependency-groups]
dev = ["ruff>=0.15,<0.16"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
