[package]
name = "subtr-actor-bakkesmod"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "C ABI for feeding BakkesMod live Rocket League samples into subtr-actor mechanics detectors"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
base64 = "0.22.1"
boxcars.workspace = true
flate2 = "1.1.2"
serde_json = "1.0.140"
subtr-actor = { path = "../../.." }
subtr-actor-live = { path = "../../../crates/subtr-actor-live" }
